tests/negative/byte_range.urb
numbers = [256];
numbers.toInt();
